--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ section{
     padding-bottom: 2rem;
 }
 
+
 .heading span{
     color:var(--green);
     text-transform: uppercase;
@@ -117,7 +118,7 @@ section{
 .header .navbar a{
     display: block;
     margin:1.5rem 0;
-    padding:.7rem;
+    padding:.4rem;
     border-radius: 5rem;
     font-size: 2rem;
     box-shadow: var(--box-shadow);
@@ -188,12 +189,17 @@ section{
     line-height: 1.1;
     text-transform: uppercase;
 }
+.home .content h1{
+    font-size: 4rem;
+    color:var(--black);
+    line-height: 1.1;
+}
 
 .home .content p{
     font-size: 2rem;
     color:var(--green);
     padding-bottom: .5rem;
-    text-align: justify;
+    text-align: center;
 }
 
 .home .share{
@@ -387,6 +393,56 @@ section{
 .services .box-container .box:hover > *{
     color:#fff;
 }
+
+
+/* Education section */
+
+.education .box-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:2rem 0;
+}
+
+.education .box-container .box{
+    width:30rem;
+    padding:0 2rem;
+    padding-bottom: 4rem;
+    border-left: .2rem solid #eee;
+}
+
+.education .box-container .box .year{
+    font-size: 2rem;
+    font-weight: bold;
+    color:var(--light-color);
+    position: relative;
+}
+
+.education .box-container .box .year::before{
+    content:'';
+    position: absolute;
+    top:.3rem; left: -3.1rem;
+    height:2rem;
+    width:2rem;
+    border-radius: 50%;
+    background:#fff;
+}
+
+.education .box-container .box h3{
+    font-size: 2rem;
+    color:var(--light-color);
+    padding-top: 1rem;
+}
+
+.education .box-container .box p{
+    font-size: 1.5rem;
+    color:var(--light-color);
+    padding: 1rem 0;
+}
+
+/* Education Section End */
+
+
 
 .portfolio .box-container{
     display: grid;
