--- a/css/style.css
+++ b/css/style.css
@@ -611,16 +611,32 @@ bouncungball end */
 }
 
 .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
+    color:var(--black);
     padding: 15px 32px;
+    height: 50px;
+    padding: 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    border-radius: 25px;
-  }
+    cursor:pointer;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 49px;
+    background: linear-gradient(145deg, #17cb65, #1bf178);
+    box-shadow:  5px 5px 10px #109249,
+                 -5px -5px 10px #22ff97;
+    
+}
+
+
+ .button:hover
+{
+    border-radius: 49px;
+    background: #19e170;
+    box-shadow: inset 5px 5px 10px #109249,
+            inset -5px -5px 10px #22ff97;
+}
+
 
 
 
