--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,7 @@ bouncungball end */
 .portfolio .box-container .box{
     height: 25rem;
     border-radius: .5rem;
-    /* overflow:hidden; */
+    overflow:hidden;
     box-shadow: var(--box-shadow);
     position: relative;
     border:1rem solid transparent;
